2006-07-27  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/include/freeipmi/ipmi-locate.h: removed
	locate_driver in struct ipmi_locate_info.

	* ipmi-locate/src/ipmi-locate.c (display_ipmi_locate_info),
	libfreeipmi/src/ipmi-locate-dmidecode.c (dmi_table),
	libfreeipmi/src/udm/ipmi-udm.c (ipmi_open_inband): Adjusted struct
	ipmi_locate_info change accordingly.

2006-07-27  A Balamurugan  <bala@zresearch.com>

	* ipmi-locate/src/ipmi-locate.c (display_ipmi_locate_info):
	displays 'DMIDECODE' locate_driver_type.

2006-07-27  A Balamurugan  <bala@zresearch.com>

	* bmc-config/bmc-config.8.pre.in: removed unclosed double quote.

	* ipmi-locate/src/ipmi-locate.c: Fixed bug in return value check
	of ipmi_locate_*_get_dev_info calls.

	* libfreeipmi/src/ipmi-locate.c (ipmi_locate): clears linfo before
	calling probing functions.

2006-07-27  Albert Chu <chu11@llnl.gov>

	* fish/scripts/bmc-autoconfig/: Removed all files.

	* bmc-config/bmc-autoconfig/Makefile.am: Use $(localstatedir)

	* libfreeipmi/src/udm/Makefile.am: Dist ipmi-udm-device.h.

	* libfreeipmi/Makefile.am: Fix ipckey installation.

	* bmc-watchdog/Makefile.am: Fix distcheck. 

2006-07-27  Anand V. Avati <avati@zresearch.com>

	* bmc-config/bmc-autoconfig: moved from fish/scripts/bmc-autoconfig

	* bmc-config/bmc-autoconfig/bmc-autocnfig.8: man page for bmc-autoconfig
	
2006-07-26  Albert Chu <chu11@llnl.gov>

	* common/src/argp-common.c (init_common_cmd_args): Make default
	authentication type MD5

	* common/doc/argp-common-authtype.man: Make default authentication
	type MD5.

	* common/doc/argp-common-inband.man: Add register spacing option.

	Various cleanup.
	
	* libfreeipmi/include/freeipmi/ipmi-locate.h
	(IPMI_INTERFACE_MAX, IPMI_INTERFACE_LAST): Removed macro.

	* libfreeipmi/src/ipmi-locate-acpi-spmi.c
	(ipmi_acpi_get_spmi_table): Adjust appropriately.

	* libfreeipmi/include/freeipmi/udm/ipmi-udm.h
	(IPMI_POLL_INTERVAL_USECS): Removed macros.
