@@ -1,5 +1,10 @@
 2006-07-27  A Balamurugan  <bala@zresearch.com>
 
+	* fish/src/ipmi-wrapper.c (fi_ipmi_open): fixed improper argument
+	passing to ipmi_open_inband().
+
+2006-07-27  A Balamurugan  <bala@zresearch.com>
+
 	* libfreeipmi/include/freeipmi/ipmi-locate.h: removed
 	locate_driver in struct ipmi_locate_info.
 
